add singleCocktail loader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["/src"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@types/*": ["src/types/*"],
+      "@loaders/*": ["src/loaders/*"],
+      "@pages/*": ["src/pages/*"]
     }
   },
   "include": ["src"],
